@@ -4,9 +4,10 @@
 + Added the Shifted view, which emulates several tiling configurations
 + Added "stamp" brushes
 * Added support for layer locking (not editable when locked)
-+ Added support for tmx.gz map files
-+ Added the ability to merge tile images when layers are merged
+* Added support for tmx.gz map files
+* Added the ability to merge tile images when layers are merged
 * Added selection addition and substraction via Shift and Ctrl respectively
++ Added ability to select multiple layers from layer table
 * Improved the drawing speed thanks to some thorough testing and suggestions (Jerome Blouin)
 * Improved transformation so that it respects selections
 * Fixed the "Save As Image" feature to use current zoom level
@@ -16,6 +17,7 @@
 * Fixed removing tilesets in the Tileset Manager
 + Fixed image loading to ensure hardware acceleration is used in Java 1.4 and above (Jerome Blouin)
 * Fixed a NullPointerException when loading TSX files as imported tilesets
+* Fixed an "Unsupported protocol" error when loading TMX files which referenced an external tileset
 
 0.5.0 - December 14th, 2004
 
